--- a/between_app/templates/between_app/cover.html
+++ b/between_app/templates/between_app/cover.html
@@ -41,7 +41,7 @@
   
  
     <div class="mt-auto text-white-50">
-      <p class="d-inline" id="my_site_link">Check out <a href="https://www.gabrielsoler.co.uk/">My site</a></p>
+      <p class="d-inline" id="my_site_link">Check out <a href="https://www.gabrielsoler.co.uk/">Author's Site</a></p>
       <a href="#intro-card"><i class="bi bi-arrow-down-short mb-2 text-light position-absolute start-50 fs-4"></i></a>
 
     </div>
