--- a/dive_app/templates/dive_app/index.html
+++ b/dive_app/templates/dive_app/index.html
@@ -35,7 +35,7 @@
 <div class="card mb-3 border-primary border-1 soft-blue"> 
   <div class="card-body">
 
-  <h2 class='card-title'>Creation journal</h2>
+  <h2 class='card-title'>Creation Exercise</h2>
 
   <ul class='list-group'>
   {% for creation in creations %}
@@ -62,7 +62,7 @@
 <div class="card mb-3 border-primary border-1 soft-blue"> 
   <div class="card-body">
 
-  <h2 class='card-title'>Shadow Journal</h2>
+  <h2 class='card-title'>Shadow Deep Reflection</h2>
 
   <ul class='list-group'>
   {% for shadow in shadows %}
@@ -92,7 +92,7 @@
 <div class="card mb-3 border-primary border-1 soft-blue"> 
   <div class="card-body">
 
-  <h2 class='card-title'>Assemble a model</h2>
+  <h2 class='card-title'>Assemble a Model Exercise</h2>
 
   <ul class='list-group'>
   {% for assemble in assembles %}
