--- a/learning_logs/templates/learning_logs/topic/topics.html
+++ b/learning_logs/templates/learning_logs/topic/topics.html
@@ -11,7 +11,7 @@
             <a href="{% url 'learning_logs:topic' topic.pk %}">
             {{topic.text}} </a> &nbsp;
             <a class='link-secondary' 
-            data-bs-toggle="tooltip" data-bs-title="Add Topic"
+            data-bs-toggle="tooltip" data-bs-title="Add Entry"
             data-bs-custom-class="custom-tooltip"    
             href="{% url 'learning_logs:new_entry' topic.pk %}">
               <i class="bi bi-plus-square-fill text-primary fs-5"></i></a>
