--- a/between_app/templates/between_app/cover.html
+++ b/between_app/templates/between_app/cover.html
@@ -21,17 +21,17 @@
     <!--Wellcomes the authenticated user and gives two options:tests or theory-->
     <h1 class="t-bright-yellow" id="landing-text_1">Welcome back, {{user.username}}!</h1>
     <p class="text-light lead" id="landing-text_2">
-      <i class="bi bi-brush-fill"></i> Keep exploring and playing!
-        <a class="link fs-6" href="https://theory.crea-therapy.com/" target="_blank">Read Theory</a>
+      <i class="bi bi-brush-fill"></i> Keep exploring and playing!</br>
+      <i class="bi bi-book-fill"></i>  Explore more at the <a class="link fs-6" href="https://theory.crea-therapy.com/" target="_blank">Theory Site</a>
       </p>
         <a href="{% url 'between_app:test_home' %}" class="btn btn-lg btn-primary fw-bold" id="landing-button">See your tests</a>
 
     {% else %}
     <!--Wellcomes the user and gives a test option-->
     <h1 class="t-bright-yellow" id="landing-text_1">Your Journey your Knowledge</h1>
-    <p class="text-light" id="landing-text_2">
+    <p class="text-light lead" id="landing-text_2">
       <i class="bi bi-brush-fill lead"></i> A creative and modular approach to psychotherapy.</br>
-      <i class="bi bi-book-fill"></i>  Read more about the theory: <a class="link fs-6" href="https://theory.crea-therapy.com/" target="_blank">CreaTheory</a>
+      <i class="bi bi-book-fill"></i>  Explore more at the <a class="link fs-6" href="https://theory.crea-therapy.com/" target="_blank">Theory Site</a>
       </p>
         <p class="lead">
           <a href="{% url 'between_app:profile_test' %}" class="btn btn-lg btn-primary fw-bold" id="landing-button">Take a Test</a>
