opened the restrictions to the component list of techniques

--- a/techniques_app/templates/techniques_app/group_list.html
+++ b/techniques_app/templates/techniques_app/group_list.html
@@ -9,6 +9,15 @@
         <!-- card header -->
         <div class="card-header bg-primary-subtle border border-primary border-3">
                 <div class="card-title display-6">Components List:</div>
+                <p class="card-text">Explore Techniques written by others and share yours.</p>
+
+                <div
+                        class="alert alert-info"
+                        role="alert"
+                >
+                        <strong>Sign in</strong> to see the techniques
+                </div>
+                
 <a class="card-link" href="{% url 'techniques_app:techniques_long_community'%}">All Techniques</a>
 <a class="card-link" href="{% url 'techniques_app:index'%}">My Repository</a>
         </div>
