alert if not authenticated for group list of techniques borders in the journal space

--- a/learning_logs/templates/learning_logs/index.html
+++ b/learning_logs/templates/learning_logs/index.html
@@ -17,7 +17,7 @@
 
 {% if user.is_authenticated%}
 
-<div class="card cold-white mb-3">
+<div class="card cold-white mb-3 border-primary border-1">
   <div class="card-header soft-blue">
   <div class="card-title display-6">Create an After Session Entry:</div>
 </div>
@@ -49,7 +49,7 @@
 
 
 <!--Topics-->
-<div class="card cold-white mb-5">
+<div class="card cold-white mb-5 border-primary border-1">
   <div class="card-header soft-blue">
   <div class="card-title display-6">Learning Topics</div> <!--immediate access to create a topic-->
 </div>
