--- a/learning_logs/templates/learning_logs/index.html
+++ b/learning_logs/templates/learning_logs/index.html
@@ -10,7 +10,7 @@
 <h2 class='card-title'>Journal Space</h2>
 
 <p class='card-text'>The Journal space helps you keep track of your reflections and deepen your understanding of therapy.</p>
-<p class='card-text'>The Journal you can use it as you explore the theory at: <a class="link-info"
+<p class='card-text'>Use it as you explore the theory at: <a class="link-info"
   href="https://theory.crea-therapy.com/" target="_blank"
   >Crea-Theory</a></p>
   </div></div>
