--- a/techniques_app/templates/techniques_app/index.html
+++ b/techniques_app/templates/techniques_app/index.html
@@ -13,7 +13,7 @@
         <!-- Text if no permissions -->
 
         
-        <p class='lead'>This is a space save, share and learn about therapeutic techniques.</p>
+        <p class='lead'>A space to save, share and learn about therapeutic techniques.</p>
         
         {% if user.is_authenticated%}
         {% if not perms.accounts.can_dive %}
