added tests to assemble model

--- a/dive_app/templates/dive_app/assemble/assemble_by_date.html
+++ b/dive_app/templates/dive_app/assemble/assemble_by_date.html
@@ -5,14 +5,14 @@
 
 <div class="card mt-3 mb-3 p-3 cold-white">
   <div class="card-header soft-blue display-6">
-    <i class="bi bi-shadows"></i> Assemble List (by date)
+    <i class="bi bi-brilliance"></i> Assemble List (by date)
   </div>
 
   <div class="card-body">
 
-  <a href="{%url 'dive_app:new_shadow'%}"
+  <a href="{%url 'dive_app:new_assemble'%}"
   class="card-link"><small>Add new Assemble entry</small></a>
-  <a href="{%url 'dive_app:shadows_by_title'%}"
+  <a href="{%url 'dive_app:assemble_by_title'%}"
   class="card-link"><small>Order By title</small></a>
 
 
