--- a/dive_app/templates/dive_app/assemble/new_assemble.html
+++ b/dive_app/templates/dive_app/assemble/new_assemble.html
@@ -11,7 +11,7 @@ Assemble Model Entry
 <div class="card cold-white mt-3 mb-3">
   <div class="card-header soft-blue">
   <div class="card-title display-6">
-    <i class="bi bi-brilliance"></i></i> Assemble Model Reflections</div>
+    <i class="bi bi-brilliance"></i></i> Assemble Model: Exercise</div>
 </div>
   <div class="card-body">
 <p class="card-title">This guided reflection aims to help you create your own models and align theory and practice with your own tendencies.
