corrected shorter lists in techniques

--- a/techniques_app/templates/techniques_app/techniques_list_by_user.html
+++ b/techniques_app/templates/techniques_app/techniques_list_by_user.html
@@ -4,7 +4,7 @@
 
 {%block content%}
 
-<div class='card mt-2 mb-3 border-3 border-primary col-10'>
+<div class='card mt-2 mb-3 border-3 border-primary'>
    <div class='card-heading p-3 soft-orange border-bottom border-primary rounded'>
         <h2 class='mt-2 display-5'>Techniques by: {{author_info.name}}</h2>
         <p><b>About:</b> {{author_info.about}}</p>
