--- a/techniques_app/templates/techniques_app/techniques_list_community.html
+++ b/techniques_app/templates/techniques_app/techniques_list_community.html
@@ -3,7 +3,7 @@
 <!--Receives two functions, with different lists of techniques, one with compnent tittle one with all of them-->
 
 {%block content%}
-<div class='card mt-2 mb-3 border-3 border-primary col-10'>
+<div class='card mt-2 mb-3 border-3 border-primary'>
 <div class='card-heading p-3 soft-orange border-bottom border-primary rounded'>
         {% if component %}
         <h2 class='mt-2 display-5'>Techniques by: {{component.name|title}}</h2>
