--- a/between_app/templates/between_app/_base.html
+++ b/between_app/templates/between_app/_base.html
@@ -154,73 +154,76 @@
     {% block extra_body %}
     {% endblock extra_body %}
     
-</main>
+  </main>
 </br>
 <!--Fixed footer nav -->
 <footer class="bg-primary">
-      <ul class="nav nav-underline px-3 bg-primary fixed-bottom nav-justified">
-            <li class="nav-item">
-              <a class="nav-link fw-light link-secondary fs-4 {% if request.path == '/' %}active{% endif %}" 
-              data-bs-toggle="tooltip" data-bs-title="Home"
-              data-bs-custom-class="custom-tooltip"
-              href="{% url "between_app:index" %}">
-            <i class="bi bi-house-fill"></i>
-          <span class="d-none d-md-inline fs-5">
-            Home
-          </span>
-          </a>
-            </li>
-              <!--Add Question -->
-              <li class="nav-item">
-                <a class="nav-link fw-light link-secondary fs-4" 
-                data-bs-toggle="tooltip" data-bs-title="Go To Theory Page"
-                data-bs-custom-class="custom-tooltip"
-                href="https://theory.crea-therapy.com/"
-                target="_blank">
-                  <i class="bi bi-patch-question-fill"></i>
-                  <span class="d-none d-md-inline fs-5">
-                  Learn
-                  </span>
+  <ul class="nav nav-underline px-3 bg-primary fixed-bottom nav-justified">
+    <li class="nav-item">
+      <a class="nav-link fw-light link-secondary fs-4 {% if request.path == '/' %}active{% endif %}" 
+      data-bs-toggle="tooltip" data-bs-title="Home"
+      data-bs-custom-class="custom-tooltip"
+      href="{% url "between_app:index" %}">
+      <i class="bi bi-house-fill"></i>
+      <span class="d-none d-md-inline fs-5">
+        Home
+      </span>
+    </a>
+  </li>
+    <!--Profile Test-->
+    <li class="nav-item">
+      <a class="nav-link fw-light link-secondary fs-4 {% if request.path == "/tests/" %}active{% endif %}" 
+      data-bs-toggle="tooltip" data-bs-title="My Profile"
+      data-bs-custom-class="custom-tooltip"
+      href="{% url "between_app:test_home" %}">
+        <i class="bi bi-person-vcard-fill"></i>
+      <span class="d-none d-md-inline fs-5">
+        Profile
+        </span>
+      </a>
+    </li>
+    <!--Add Topic -->
+    <li class="nav-item">
+      <a class="nav-link fw-light link-secondary fs-4 {% if request.path == '/learning/' %}active{% endif %}" 
+      data-bs-toggle="tooltip" data-bs-title="My Journal"
+      data-bs-custom-class="custom-tooltip"
+      href="{% url "learning_logs:index" %}">
+      <i class="bi bi-pen-fill"></i>
+      <span class="d-none d-md-inline fs-5">
+        Journal
+        </span>
+  </a>
+    </li>
+    <!-- Add Technique -->
+    <li class="nav-item">
+      <a class="nav-link fw-light link-secondary fs-4 {% if request.path == '/techniques/components_list/' %}active{% endif %}" 
+      data-bs-toggle="tooltip" data-bs-title="Read Techniques"
+      data-bs-custom-class="custom-tooltip"
+      href="{% url "techniques_app:components_list" %}">
+      <i class="bi bi-lightbulb-fill"></i>
+      <span class="d-none d-md-inline fs-5">
+        Techniques
+        </span>
+  </a>
+    </li>
+    
+    <!--Theory page -->
+    <li class="nav-item">
+      <a class="nav-link fw-light link-secondary fs-4" 
+      data-bs-toggle="tooltip" data-bs-title="Go To Theory Page"
+      data-bs-custom-class="custom-tooltip"
+      href="https://theory.crea-therapy.com/"
+      target="_blank">
+      <i class="bi bi-patch-question-fill"></i>
+      <span class="d-none d-md-inline fs-5">
+        Learn
+      </span>
+      
+    </a>
+  </li>
+  </ul>
 
-                  </a>
-              </li>
-              <!--Add Topic -->
-              <li class="nav-item">
-                <a class="nav-link fw-light link-secondary fs-4 {% if request.path == '/learning/' %}active{% endif %}" 
-                data-bs-toggle="tooltip" data-bs-title="My Journal"
-                data-bs-custom-class="custom-tooltip"
-                href="{% url "learning_logs:index" %}">
-                <i class="bi bi-pen-fill"></i>
-                <span class="d-none d-md-inline fs-5">
-                  Journal
-                  </span>
-            </a>
-              </li>
-              <!-- Add Technique -->
-              <li class="nav-item">
-                <a class="nav-link fw-light link-secondary fs-4 {% if request.path == '/techniques/components_list/' %}active{% endif %}" 
-                data-bs-toggle="tooltip" data-bs-title="Read Techniques"
-                data-bs-custom-class="custom-tooltip"
-                href="{% url "techniques_app:components_list" %}">
-                <i class="bi bi-lightbulb-fill"></i>
-                <span class="d-none d-md-inline fs-5">
-                  Techniques
-                  </span>
-            </a>
-              </li>
-              <!--Profile Test-->
-              <li class="nav-item">
-                <a class="nav-link fw-light link-secondary fs-4 {% if request.path == "/tests/" %}active{% endif %}" 
-                data-bs-toggle="tooltip" data-bs-title="My Profile"
-                data-bs-custom-class="custom-tooltip"
-                href="{% url "between_app:test_home" %}">
-                  <i class="bi bi-person-vcard-fill"></i>
-                <span class="d-none d-md-inline fs-5">
-                  Profile
-                  </span>
-                            </a>
-              </li>
-            </ul>
+
           </div>
         </div>
       </nav>
