--- a/between_app/templates/between_app/_base.html
+++ b/between_app/templates/between_app/_base.html
@@ -30,11 +30,13 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/velocity/2.0.6/velocity.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/velocity/2.0.6/velocity.ui.min.js"></script>
-    <!--a script django block to add js files per page-->
-    <script src="{%block page_script%}{% endblock page_script%}"></script>
+
+    <!-- Htmx -->
+    <script src="https://unpkg.com/htmx.org@2.0.4"></script>
+
 </head>
 
-<body class='bg-light'>
+<body class='bg-light' hx-boost="true">
 <nav class="navbar navbar-expand-lg bg-primary sticky-top start-0" data-bs-theme="dark" id="top-nav-bar">
     <div class='container-fluid'>
     
@@ -206,7 +208,7 @@
         </span>
   </a>
     </li>
-    
+
     <!--Theory page -->
     <li class="nav-item">
       <a class="nav-link fw-light link-secondary fs-4" 
@@ -231,6 +233,8 @@
 
 </footer>
 </body>
+    <!--a script django block to add js files per page-->
+    <script src="{%block page_script%}{% endblock page_script%}"></script>
 <script>
 const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
 const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
