--- a/between_app/templates/between_app/_base.html
+++ b/between_app/templates/between_app/_base.html
@@ -36,7 +36,7 @@
 
 </head>
 
-<body class='bg-light'>
+<body class='bg-light' hx-boost="True">
 <nav class="navbar navbar-expand-lg bg-primary sticky-top start-0" data-bs-theme="dark" id="top-nav-bar">
     <div class='container-fluid'>
     
