added two factor auth

--- a/accounts/templates/allauth/layouts/manage.html
+++ b/accounts/templates/allauth/layouts/manage.html
@@ -34,14 +34,14 @@
                 {% url 'mfa_index' as mfa_index_url %}
                 {% if mfa_index_url %}
                     <li class="nav-item">
-                        <a class="{% block nav_class_mfa %}nav-link text-white{% endblock %}"
+                        <a class="{% block nav_class_mfa %}nav-link text-primary{% endblock %}"
                            href="{{ mfa_index_url }}">Two-Factor Authentication</a>
                     </li>
                 {% endif %}
                 {% url 'usersessions_list' as usersessions_list_url %}
                 {% if usersessions_list_url %}
                     <li class="nav-item">
-                        <a class="{% block nav_class_usersessions %}nav-link text-white{% endblock %}"
+                        <a class="{% block nav_class_usersessions %}nav-link text-primary{% endblock %}"
                            href="{{ usersessions_list_url }}">Sessions</a>
                     </li>
                 {% endif %}
