--- a/between_app/templates/between_app/_base.html
+++ b/between_app/templates/between_app/_base.html
@@ -48,7 +48,7 @@
           alt=""
           
         />  
-          CreaTherapy v.β</a>
+          CreaTherapy v1.0</a>
 
         <button class='navbar-toggler' type='button' data-bs-toggle='collapse'
         data-bs-target='#navbarCollapse' aria-controls='navbarCollapse'
